# ChainInsight_Supply_Chain_Intelligence_Platform

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_STREAMING.md  CLAUDE.md  README.md  chart_15_to_22_ai_algorithms_analysis.py.txt  chart_15_to_22_ai_algorithms_analysis_en.py.txt  dashboard.html  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: auth.py  config.py  main.py  metrics.py  settings.py  watcher.py
app/api/: routes.py
app/capacity/: __init__.py  models.py  visualization.py
app/db/: models.py
app/forecasting/: data_generator.py  feature_store.py  models.py
app/pipeline/: enrichment.py  etl.py  ml_engine.py  orchestrator.py  stats.py  supply_chain.py
app/rl/: __init__.py  curriculum.py  environment.py  evaluator.py  trainer.py
app/rl/agents/: __init__.py  base.py  dqn.py  hybrid_ga_rl.py  ppo.py  q_learning.py
app/sensing/: __init__.py  signals.py  visualization.py
app/services/: __init__.py  pipeline_service.py
app/sop/: __init__.py  simulator.py  visualization.py
app/ws/: __init__.py  manager.py  routes.py
configs/: chaininsight.yaml
demo/: screenshot.mjs
docs/: failure_modes.md  reproducibility.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChartImage.tsx  DataTable.tsx  (+7 more)
helm/chaininsight/: Chart.yaml  values.yaml
k8s/: secret.yaml
loadtests/: slo.yaml
mlflow/: docker-compose.mlflow.yaml
monitoring/: docker-compose.monitoring.yaml
pipelines/: docker-compose.airflow.yaml
pipelines/dags/: chaininsight_training.py
serving/: bentofile.yaml  service.py
tests/: conftest.py  test_api_security.py  test_capacity.py  test_data_generator.py  test_etl.py  test_forecasting_models.py  test_hierarchy.py  test_ml_leakage.py  test_multi_product_env.py  test_property_based.py  test_rl_baselines.py  test_rl_environment.py  test_sensing.py  test_sop.py
(+18 files in other folders)
